# pgnutils

./: .gitignore  .gitmodules  __init__.py  cfg.yml  cfghead.yml  config.py  dbg_cfg.yml  dbg_model.py  dbg_profile.py  dbgcfg.yml  environment.yml  environment_aarch64.yml  estimate_compute_req.py  eval_pgn.py  generate_cheating_testdata.py  inference.py  launch_head.sh  launch_torchrun.sh  launch_training.sh  main.py  mmc.py  mmcCustom.py  mmcdataset.py  model.py  play_game.py  predict.py  profile_model.py  provision.sh  reconstruct.py  remote_provision.py  save_weights.py  train.py  utils.py  validate.py
dataProcessing/: CMakeLists.txt  MMCRawDataReader.h  mimicChessData.cpp
pgn/: __init__.py  concat_datasets.py  download_and_parse_all.py  download_and_parse_lichess.py  dump_game.py  list.txt  parse_pgn.py  prepare_pgn.py  resize_mmaps.py  split_elos.py  stats.py  validate_data.py  whiten_elos.py
pgn/cpp/: .ccls  CMakeLists.txt  downloadAndParse.cpp  parallelParser.cpp  parallelParser.h  parser.h  processZst.cpp  profiler.cpp  profiler.h  serialParser.cpp
pgn/cpp/dataProcessing/: filterData.cpp
pgn/cpp/filterData/: .ccls  CMakeLists.txt  MMCRawDataReader.cpp  MMCRawDataReader.h  filterData.cpp  split_TVT.py
pgn/cpp/lib/: CMakeLists.txt  decompress.cpp  decompress.h  inference.cpp  inference.h  parseMoves.cpp  parseMoves.h  utils.cpp  utils.h  validate.cpp  validate.h
pgn/cpp/processZst/: CMakeLists.txt  parallelParser.cpp  parallelParser.h  parser.h  processZst.cpp  serialParser.cpp  serialParser.h
pgn/cpp/processZst/lib/: CMakeLists.txt  inference.cpp  inference.h  parseMoves.cpp  parseMoves.h  validate.h
pgn/cpp/profiling/: CMakeLists.txt  profiler.h
pgn/cpp/resizeMMap/: CMakeLists.txt  resizeMMap.cpp
pgn/lib/: __init__.py  chunk_parser.py  inference.py  parse_moves.py  validate.py
pgn/py/: parse_pgn.py
pgn/py/lib/: __init__.py  data_writer.py  inference.py  parse_moves.py  reconstruct.py  utils.py
pgn/python/: download_and_parse_all.py  parse_pgn.py
pgn/python/lib/: utils.py  validate.py
pgn/tests/: test10.pgn  test11.pgn  test12.pgn  test13.pgn  test14.pgn  test2.pgn  test3.pgn  test4.pgn  test5.pgn  test6.pgn  test7.pgn  test8.pgn  test9.pgn
