cmake_minimum_required(VERSION 3.22)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
option(ENABLE_PROFILING "Profile code" OFF)
if(ENABLE_PROFILING)
	add_definitions(-DPROFILE_ENABLE)
endif()
project(PgnProcessor)
add_executable(downloadAndParse downloadAndParse.cpp parallelParser.cpp)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(re2 REQUIRED)
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	find_package(zstd REQUIRED)
	target_link_libraries(downloadAndParse PRIVATE zstd::libzstd)
endif()
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	add_subdirectory(zstd/build/cmake)
	target_link_libraries(downloadAndParse PRIVATE libzstd)
endif()
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
add_subdirectory(lib)
add_subdirectory(profiling)

target_link_libraries(downloadAndParse PUBLIC PgnParser Profiler)
target_link_libraries(downloadAndParse PRIVATE re2::re2)
target_include_directories(downloadAndParse PUBLIC "${PROJECT_SOURCE_DIR}/lib")
target_include_directories(downloadAndParse PUBLIC "${PROJECT_SOURCE_DIR}/profiling")
target_include_directories(downloadAndParse PUBLIC "${PROJECT_SOURCE_DIR}/libnpy/include")

