cmake_minimum_required(VERSION 3.22)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
option(ENABLE_PROFILING "Profile code" OFF)
if(ENABLE_PROFILING)
	add_definitions(-DPROFILE_ENABLE)
endif()
project(PgnProcessor)
add_executable(processZst processZst.cpp parallelParser.cpp serialParser.cpp)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(absl REQUIRED)
find_package(re2 REQUIRED)
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
	find_package(zstd REQUIRED)
	target_link_libraries(processZst PRIVATE zstd::libzstd)
endif()
if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	add_subdirectory(zstd/build/cmake)
	target_link_libraries(processZst PRIVATE libzstd)
endif()
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
add_subdirectory(lib)
add_subdirectory(profiling)

target_link_libraries(processZst PRIVATE absl::flags_parse)
target_link_libraries(processZst PRIVATE re2::re2)
target_link_libraries(processZst PUBLIC PgnParser Profiler)
target_include_directories(processZst PUBLIC "${PROJECT_SOURCE_DIR}/lib")
target_include_directories(processZst PUBLIC "${PROJECT_SOURCE_DIR}/profiling")
target_include_directories(processZst PUBLIC "${PROJECT_SOURCE_DIR}/libnpy/include")

