cmake_minimum_required(VERSION 3.22)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
option(ENABLE_PROFILING "Profile code" OFF)
if(ENABLE_PROFILING)
	add_definitions(-DPROFILE_ENABLE)
endif()
project(mimicChessTools)
add_subdirectory(profiling)
add_subdirectory(utils)
add_subdirectory(processZst)
add_subdirectory(filterData)
add_subdirectory(resizeMMap)
