cmake_minimum_required(VERSION 3.22)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
option(ENABLE_PROFILING "Profile code" OFF)
if(ENABLE_PROFILING)
	add_definitions(-DPROFILE_ENABLE)
endif()
project(MMCDataProcessing)
add_executable(filterData filterData.cpp)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(absl REQUIRED)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
target_link_libraries(filterData PRIVATE absl::flags_parse)
target_include_directories(filterData PUBLIC "${PROJECT_SOURCE_DIR}/../libnpy/include")
