project(MMCDataProcessing)
add_executable(filterData filterData.cpp MMCRawDataReader.cpp)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(absl REQUIRED)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
target_include_directories(filterData PUBLIC "${PROJECT_SOURCE_DIR}/..")
target_include_directories(filterData PUBLIC "${PROJECT_SOURCE_DIR}/../include")
find_package(re2 REQUIRED)
target_link_libraries(filterData PRIVATE absl::flags_parse re2::re2 Utils)
