cmake_minimum_required(VERSION 3.22)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)
option(ENABLE_PROFILING "Profile code" OFF)
if(ENABLE_PROFILING)
	add_definitions(-DPROFILE_ENABLE)
endif()
project(ProcessZst)
add_executable(processZst processZst.cpp parallelParser.cpp serialParser.cpp)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(absl REQUIRED)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
add_subdirectory(lib)
add_subdirectory(profiling)

target_link_libraries(processZst PRIVATE absl::flags_parse)
target_link_libraries(processZst PUBLIC PgnParser Profiler)
target_include_directories(processZst PUBLIC "${PROJECT_SOURCE_DIR}/lib")
target_include_directories(processZst PUBLIC "${PROJECT_SOURCE_DIR}/profiling")
target_include_directories(processZst PUBLIC "${PROJECT_SOURCE_DIR}/../libnpy/include")

